--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,8 @@
 
-<h1>404</h1>
-<p>
-Nie znaleziono podanej scieżki , sprawdź pisownie i sprobuj ponownie ;)
-</p>
+<div id= "error">
+    <h1>404</h1>
+    <p>
+    Nie znaleziono podanej scieżki , sprawdź pisownie i sprobuj ponownie ;)
+    </p>
+    
+</div>
