LoginComponentAdd: html , css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-Welocome to angular
+
+<div id= "mainPanle">
+    <img width="300" alt="Angular Logo" src="img/LogoSklep.png"> 
+    <app-search-clothes></app-search-clothes>
+    <app-login></app-login>
+</div>
 <app-nav></app-nav>
-<app-search-clothes></app-search-clothes>
 <router-outlet></router-outlet>
