--- a/src/app/search-clothes/search-clothes.component.html
+++ b/src/app/search-clothes/search-clothes.component.html
@@ -1,3 +1,7 @@
-<p>
-  search-clothes works!
-</p>
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Wyszukaj" >
+  </mat-form-field>
+
+ 
+</form>
