--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <div id= "mainPanle">
-    <img width="300" alt="Angular Logo" src="img/LogoSklep.png"> 
-    <app-search-clothes></app-search-clothes>
-    <app-login></app-login>
+    <img width="300px" alt="Angular Logo" src="img/LogoSklep.png"> 
+    <app-search-clothes style="width: 35%;"></app-search-clothes>
+    <app-login style="width: 35%"></app-login>
 </div>
 <app-nav></app-nav>
 <router-outlet ></router-outlet>
