--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 
+
 <div id= "mainPanle">
-    <img width="300px" alt="Angular Logo" src="img/LogoSklep.png"> 
-    <app-search-clothes style="width: 35%;"></app-search-clothes>
-    <app-login style="width: 35%"></app-login>
+    <img  alt="Angular Logo" src="https://securects.files.wordpress.com/2014/08/logo-avtech.jpg"> 
+    <app-search style="width:60%"> </app-search>
 </div>
-<app-nav></app-nav>
-<router-outlet ></router-outlet>
+<app-nav></app-nav>  
+<div>
+        <router-outlet ></router-outlet>
+</div>
+
+
