--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,15 @@
 #mainPanle
 {
-    width: 1200px;
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
+   
 }
-
+img
+{
+    padding: 0 3% 3%  3% ;
+    width: 30%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
