--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,6 +1,23 @@
 nav
 {
+background-color: #f02d2ddc;
+display:flex;
+justify-content:space-between;
+padding: 10px 10px;
+color: white;
+}
+
+#navleft , #naviRight
+{
 display: flex;
 flex-direction:  row;
-justify-content: center;
+justify-content: space-between;
+align-items: center;
+color: white;
+
+}
+
+i
+{
+    padding: 10px;
 }
