--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,18 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body
 {
-    margin: 60px 40px;
+    margin: 0px 40px 40px 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+    background-color: rgb(236, 236, 236);
+}
+.appRoot
+{
+    padding-top: 40px;
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
 }
