--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,9 +2,8 @@
 
 
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Wyszukaj" >
-     
+      <input matInput placeholder="Wyszukaj" #searchInput > 
     </mat-form-field>
-    <button mat-raised-button color="warn">Szukaj</button>
+    <button (click) = "search(searchInput.value)" mat-raised-button color="warn">Szukaj</button>
 
 </div>
