--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
 </div>
 <app-nav></app-nav>  
 <div>
+        <app-categories style="width:20%"></app-categories>
+        <div id="routerOutleDisplay"style="width:70%">
         <router-outlet ></router-outlet>
+        </div>
 </div>
 
 
