--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -26,15 +26,30 @@
   </table>
    
 </form>
-<div id= "addPicture">
-<label for="file">File:
-<input type="file"  accept=".png,.jpg" />  </label>
+<div *ngIf="percentage | async as pct">
+  <progress [value]="pct" max="100"></progress>
+  {{ pct | number }}%
 </div>
-<button color="primary" mat-raised-button (click) = "addOtherPhotos()" >Dodaj kolejne zdjecie</button><br>
 
 
 
+<div *ngIf="snapshot | async as snap">
 
+  {{ snap.bytesTransferred }} of {{ snap.totalBytes }} 
+
+  <div *ngIf="downloadURL as url">
+    <h3>Results!</h3>
+    <img [src]="url"><br>
+    <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+  </div> 
+
+  <button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
+  <button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
+  <button (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Resume</button>
+</div>
+
+
+<div id= "addPicture">
+    <label for="file">File:</label>
+    <input type="file" [disabled]="!(NumberOfImage < 5)"  (change)="upload($event)" accept=".png,.jpg" />
 <button color="primary" mat-raised-button (click)="addProduct()"  [disabled]=" newProduct.invalid ">Dodaj Produkt</button>
-
-<img width="100px" [src]="downloadURL | async" />
