--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
 <button mat-button [routerLink]="[ '/nowosci']"  >Nowości </button>
 <button mat-button [routerLink]="[ '/promocje']" >Promocje</button>
 <button mat-button [routerLink]="[ '/wyprzedaz']" >Wyprzedaże</button>
-<button mat-button [routerLink]="[ '/kontakt']" >kontakt</button>
+<button mat-button [routerLink]="[ '/kontakt']" >Kontakt</button>
 <button mat-button [routerLink]="[ '/dostawa-i-platnosci']" >Dostawa i płatności</button>
 <button mat-button [routerLink]="[ '/filtry']" >Filtry</button>
 
