--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,8 @@ body
 }
 .appRoot
 {
-    padding-top: 40px;
-    width: 1200px;
+    padding: 50px 20px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
