--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,90 @@
-<p>
-  contact works!
-</p>
+<div id="contact_us">
+    <h2 class="section-title">Napisz do Nas</h2>
+    <div id="contact_box">
+        <div class="column">
+            <div id="contact_section_box">
+                <h3>Wpełnij  </h3>
+                <form [formGroup]="newMessage" class="contactForm" action="#" method="post">
+                    <table class="example-full-width" cellspacing="0">
+                        <tr>
+                            <td>
+                                <mat-form-field class="example-full-width">
+                                    <input matInput type="text" formControlName="name" placeholder="Nazwa">
+                                </mat-form-field>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <mat-form-field class="example-full-width">
+                                    <input matInput type="text" formControlName="subject" placeholder="Temat">
+                                </mat-form-field>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Email" [formControl]="emailFormControl">
+                                    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                                            Prosze wpisać prawidłowy adres
+                                    </mat-error>
+                                    <mat-error *ngIf="emailFormControl.hasError('required')">
+                                        Email jest <strong>wymagany</strong>
+                                    </mat-error>
+
+                                </mat-form-field>
+
+                            <td>
+                            </td>
+                        <tr>
+                            <td>
+                                <mat-form-field class="example-full-width">
+                                    <input matInput #message maxlength="256" formControlName="message" placeholder="Tekst wiadomości">
+                                    <mat-hint align="start"><strong>Opis</strong> </mat-hint>
+                                    <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+                                </mat-form-field>
+                            </td>
+                        </tr>
+
+
+
+
+                      
+
+                    </table>
+                    <div class="contact-response"></div>
+                    <button color="primary" mat-raised-button  [disabled]=" emailFormControl.invalid || newMessage.invalid ">Wyślij</button>
+                </form>
+                
+            </div>
+        </div>
+        <div class="column">
+            <ul class="contact-list">
+                <li>
+                    <strong>E-mail</strong>
+                    <span><a href="mailto:robertsmith@company.com">robertsmith@company.com</a></span>
+                </li>
+                <li>
+                    <strong>Phone</strong>
+                    <span>+1 256 254 84 56</span>
+                </li>
+                <li>
+                    <strong>Viber</strong>
+                    <span>+1 256 254 84 56</span>
+                </li>
+                <li>
+                    <strong>Skype</strong>
+                    <span>robsmithcompany</span>
+                </li>
+                <li>
+                    <strong>Address</strong>
+                    <span>24058, Belgium, Brussels, Liutte 27, BE</span>
+                </li>
+            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80598.8931079607!2d4.305349869517269!3d50.85495409070423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3a4ed73c76867%3A0xc18b3a66787302a7!2sBruksela%2C+Belgia!5e0!3m2!1spl!2spl!4v1525718414134"
+                width="100%" height="340px" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
+
+
+    </div>
+</div>
