--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -14,10 +14,10 @@
                   <td><mat-form-field class="example-full-width">
                       <input matInput placeholder="Email" [formControl]="emailFormControl">
                       <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                        Please enter a valid email address
+                        Prosze wpisać prawidłowy adres
                       </mat-error>
                       <mat-error *ngIf="emailFormControl.hasError('required')">
-                        Email is <strong>required</strong>
+                        Email jest <strong>wymagany</strong>
                       </mat-error>
                     
                     </mat-form-field></td>
