--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body
     justify-content: center;
     align-items: center;
     background-color: rgb(236, 236, 236);
+    font-family: 'Open Sans', sans-serif;
 }
 .appRoot
 {
