--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -21,18 +21,32 @@ font-weight: 800;
 }
 .productDiv
 {
-    padding: 10px;
+    padding: 1% 3%;
     display: flex;
     flex-direction: column;
-    max-width: 150px;
+    align-items: center;
+ 
     margin: 4px;
     border: 1px solid #cccccc;
     height: min-content;
+    min-width: 175px;
+    width: 15%;
 }
-
-
+.buttonBox
+{
+    display: flex;
+    justify-content: space-around;
+}
+.buttonBox button
+{
+    margin: 5%;
+    display: flex;
+    justify-content:center;
+}
   
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
+    
+   
   }
