--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -1,3 +1,7 @@
+
+:host{
+    padding: 4px 5px;
+}
 li{
     font-size: 17px;
    display: flex;
@@ -10,17 +14,34 @@ li{
 }
 ul
 {
-    padding-left: 10px;
+    padding: 0;
     margin: 10px;
 }
 
 .buttonBox
 {
    display: flex;
-   justify-content: space-between;
+   justify-content: space-around;
    align-items: center; 
 }
 .buttonBox button
 {
     padding: 1% 5%;
+}
+
+#categoryTopicDiv
+{
+    
+    background-color: rgba(240, 45, 45, 0.863);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+#categoryTopicDiv p 
+{
+    margin: 14px 0;
+    font-weight: 600;
+    font-size: 15px;
 }
