--- a/src/app/product-discription/product-discription.component.html
+++ b/src/app/product-discription/product-discription.component.html
@@ -18,10 +18,10 @@
   <div class ="producent"><p>Producent: {{product.name}}</p> </div>
   <div class ="box">
       <div class= "quantity">
-          Ilość: <input   type="number"  value="1"> sztuk
+          Ilość: <input   type="number"  value="1" #input> sztuk
       </div>
       <div class ="price"><p>{{product.price}} zł</p> </div>
-      <button color="primary" mat-raised-button >Dodaj  do koszyka</button>
+      <button color="primary" (click)="addToShopingCard(product,input.value)" mat-raised-button >Dodaj  do koszyka</button>
       <div class="additionalInformation">
           <p><i class="fas fa-shipping-fast"></i><strong>Dostawa</strong>: Poczta, Kurier lub odbiór osobisty w Warszawie</p>
           <p><i class="fas fa-lock"></i> Solidnie zapakowane i <strong>ubezpieczone przesyłki</strong></p>
