--- a/src/app/shoping-cart/shoping-cart.component.html
+++ b/src/app/shoping-cart/shoping-cart.component.html
@@ -1,3 +1,43 @@
-<div *ngFor="let product of shopList">
-  {{product.id}}  {{product.name}}  {{product.price}}  {{product.quantityBuy}}
+
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Nazwa </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef> Kategoria </th>
+      <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+    </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> Cena /sz </th>
+      <td mat-cell *matCellDef="let element"> {{element.price}}zł </td>
+    </ng-container>
+    <ng-container matColumnDef="quantityBuy">
+      <th mat-header-cell *matHeaderCellDef> Ilość sztuk </th>
+      <td mat-cell *matCellDef="let element"> {{element.quantityBuy}}  </td>
+    </ng-container>
+    <ng-container matColumnDef="sum">
+      <th mat-header-cell *matHeaderCellDef> Suma </th>
+      <td mat-cell *matCellDef="let element"> {{element.quantityBuy * element.price }}  zł</td>
+    </ng-container>
+    <ng-container matColumnDef="buttons">
+      <th mat-header-cell *matHeaderCellDef>  </th>
+      <td mat-cell *matCellDef="let element"> <button color="warn" (click)="deleteProduct(element.id)"  mat-raised-button  >Usuń</button>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+
+  <button color="primary"  mat-raised-button  >Zamawiam</button>
 </div>
