added: edit name category

--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -18,12 +18,24 @@ ul
     margin: 10px;
 }
 
-.buttonBox
+.buttonBox 
 {
    display: flex;
    justify-content: space-around;
    align-items: center; 
 }
+.editBox
+{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.editBox input
+{
+    margin-bottom: 5px;
+    
+}
+
 .buttonBox button
 {
     padding: 1% 5%;
