--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -3,11 +3,15 @@
 </div>
 
 <ul  *ngFor="let category of CategoryDisplay | async ">
-                <li  [routerLink]="[category.path]"   routerLinkActive="router-link-active"  >{{category.name}}    </li>  
+                <li  [routerLink]="['/kategorie/',category.id]"   routerLinkActive="router-link-active"  >{{category.name}}    </li>  
                 <div class = "buttonBox">
                                 <button color="warn" [routerLink]="['/nowosci']" mat-raised-button (click)="deleteElement(category.id,category.name)" >Usuń</button>  
-                                <button color="primary" mat-raised-button (click)="editElement(category.id)" >Edytuj</button>  
-                </div>       
+                               
+                </div>  
+                <div class="editBox" *ngIf="isEditCategor">
+                                <input type="text" #inputNewName>
+                                <button color="primary" mat-raised-button (click)="editName(category.id,inputNewName.value , category.name)" >Zmien nazwę</button>  
+                </div>     
          
         </ul>
 
@@ -15,7 +19,7 @@
     <input matInput   placeholder="Categories" #input>
 </mat-form-field>
 <div class = "buttonBox">
-       
+        <button color="primary" mat-raised-button (click)="isEditCategor =!isEditCategor" >Edytuj</button>  
         <button color="primary"  mat-raised-button (click)="addElement(input.value)" >Dodaj</button>
 </div>
  
