--- a/src/app/last-added-product/last-added-product.component.html
+++ b/src/app/last-added-product/last-added-product.component.html
@@ -1,25 +1,36 @@
 <div class="productsBox">
-  <div class="productDiv" [routerLink]="['/produkt',products.id]" *ngFor="let products of ProductDisplay | async ">
-     
-     
-              
-              <mat-card-header>
-                
-                <mat-card-title class="titleProduct"> {{products.name}} </mat-card-title>
-
-              </mat-card-header>
-              <img mat-card-image width="100%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Three_IC_circuit_chips.JPG/220px-Three_IC_circuit_chips.JPG" alt="Brak obrazka">
-              <mat-card-content>
-                <p>
-                      Opis: {{products.description}}
-                </p>
-              </mat-card-content>
-                <div class="divPrice">
-                    Cena : {{products.price}} zł
+    <div class="productDiv" [routerLink]="['/produkt',products.id]" *ngFor="let products of ProductDisplay | async ">
+       
+                <div class = "newbox" *ngIf="products.dateOfCreation + msInADay > CurrentDataMiliseconds  ">
+                  <p>New</p>
                 </div>
-              <mat-card-actions class= "buttonBox">
-                  <button color="warn" mat-raised-button (click)="deleteElement(products.id)" >Usuń</button>  
-                  <button color="primary" mat-raised-button (click)="editElement(products.id)" >Edytuj</button>  
-              </mat-card-actions>
-  </div>
+               
+                
+                <mat-card-header>
+                  
+                  <mat-card-title class="titleProduct"> {{products.name}} </mat-card-title>
+
+                </mat-card-header>
+                
+                <img mat-card-image width="100%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Three_IC_circuit_chips.JPG/220px-Three_IC_circuit_chips.JPG" alt="Brak obrazka">
+                <mat-card-content>
+                  <p>
+                        Opis: {{products.description}}
+                  </p>
+                </mat-card-content>
+                  <div class="NormarPrice" *ngIf="false;else isReducionPrice">
+                      <p>Cena : {{products.price}} zł</p> 
+                  </div>
+                  <ng-template #isReducionPrice>
+                  <div class = "ReducionPrice" >
+                     <p>   Cena : <small>{{products.price}} </small>  <strong>{{products.price}}  </strong> zł  </p>
+                  </div>
+                </ng-template>
+                <mat-card-actions class= "buttonBox">
+                    <button color="warn" mat-raised-button (click)="deleteElement(products.id)" >Usuń</button>  
+                    <button color="primary" mat-raised-button [routerLink]="['/edytuj/',CategoryId, products.id]" >Edytuj</button>  
+                </mat-card-actions>
+    </div>
 </div>
+
+<button color="warn" mat-raised-button [routerLink]="['/dodajProdukt/', CategoryId]" >Dodaj Produkt</button>  
